# axum-oauth

./: .gitignore  Cargo.toml
client/: .gitignore  Cargo.toml  README.md
client-svelte/: package-lock.json  package.json
client-svelte/src/routes/: +page.svelte
client/src/: app.rs  main.rs
client/src/pages/: home.rs  mod.rs
client/style/: main.scss
data/: data.db  data.db-shm  data.db-wal
migrations/: 20231128015228_initial.sql
src/: lib.rs  main.rs
src/db/: mod.rs
src/models/: mod.rs
src/router/: auth_google.rs  mod.rs
src/router/auth/: auth_google.rs
src/router/user/: mod.rs  user.rs
