[package]
name = "axum-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
dotenvy = "0.15.7"
oauth2 = "4.4.2"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.38.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
