[package]
name = "axum-oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["cookie"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
oauth2 = "4.4.2"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.38.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
